:pencil: add older java compatibility