@@ -287,10 +287,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
-                    <argLine>-Dillegal-access=permit</argLine>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
